filter.css update

--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -19,3 +19,22 @@
 	height: 100%;
 	width: 25%;
 }
+.locations h3, .amenities h3
+{
+	font-weight: 600;
+}
+.filters > .locations
+{
+	border-right: 1px solid #DDDDDD;
+}
+.locations h4, .amenities h4
+{
+	font-weight: 400;
+	font-size: 14px;
+}
+.locations h3, .locations h4, .amenities h3, .amenities h4
+{
+	margin-left: 40px;
+	margin: 0;
+	margin-top: 10px;
+}
