--- a/web_static/styles/5-filters.css
+++ b/web_static/styles/5-filters.css
@@ -38,3 +38,23 @@
 	margin: 0;
 	margin-top: 10px;
 }
+.search_button
+{
+	display: inline-block;
+	font-size: 18px;
+	background-color: #FF5A5F;
+	color: #FFFFFF;
+	height: 48px;
+	width: 20%;
+	position: absolute;
+	border-radius: 4px;
+	border: none;
+	margin-top: 11px;
+	left: 80%;
+	transform: translateX(-30px);
+}
+
+.search_button:hover
+{
+	opacity: 0.9;
+}
