--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,6 +4,10 @@ footer
 	border-top: 1px solid #CCCCCC;
 	height: 60px;
 	width: 100%;
-	position: absolute;
+	position: fixed;
 	bottom: 0px;
+	align-items: center;
+	justify-content: center;
+	display: flex;
+	text-align: center;
 }
